test_programs/compile_failure/noirc_frontend_tests_visibility_errors_if_type_alias_aliases_more_private_type/src/main.nr

    struct Foo {}
    pub type Bar = Foo;
    pub fn no_unused_warnings() {
        let _: Bar = Foo {};
    }
    fn main() {}
    